--- a/style.css
+++ b/style.css
@@ -121,10 +121,11 @@ input{
     margin-bottom: 30px;
 }
 input[type="password"]{
-    border: 2px solid #c2c2c2;
+    border: 2px solid #000000;
 }
 input[type="button"]{
-    background-color: #208be3;
+    background-color: #000000;
+    border-radius: 10px;
     border: none;
     color: #ffffff;
     font-weight: 500;
@@ -177,4 +178,9 @@ span button{
     border-radius: 8px;
     width: 100%;
     text-align: center;
+}
+.btn-primary {
+    color: #fff;
+    background-color: black;
+    border-color:black
 }
